fix z-index

--- a/src/static/css/panel.css
+++ b/src/static/css/panel.css
@@ -85,7 +85,7 @@ nav a:hover {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     left: 0;
     top: 0;
     width: 100%;
@@ -169,7 +169,7 @@ input {
     border-radius: 5px;
     padding: 10px 15px;
     background-color: rgba(255, 0, 106, 0.5);
-    z-index: 2;
+    z-index: 4;
     margin: 0 50%;
     transform: translateX(-50%);
     font-family: 'Courier New', Courier, monospace;
